src/stella/stellaParser.py
# Generated from Python/src/stella/stellaParser.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
from typing import TextIO




class stellaParser ( Parser ):

    grammarFileName = "stellaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'('", "')'", "'{'", "'}'", 
                     "'='", "':'", "'->'", "'=>'", "'|'", "'<|'", "'|>'", 
                     "'['", "']'", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'!='", "'+'", "'-'", "'*'", "'/'", "'.'", "'List::head'", 
                     "'List::isempty'", "'List::tail'", "'Nat::pred'", "'Nat::iszero'", 
                     "'Nat::rec'", "'Bool'", "'Nat'", "'Unit'", "'and'", 
                     "'as'", "'cons'", "'core'", "'else'", "'extend'", "'false'", 
                     "'fix'", "'fn'", "'fold'", "'if'", "'in'", "'inl'", 
                     "'inline'", "'inr'", "'language'", "'let'", "'letrec'", 
                     "'match'", "'not'", "'or'", "'return'", "'succ'", "'then'", 
                     "'throws'", "'true'", "'type'", "'unfold'", "'unit'", 
                     "'with'", "'\u00B5'", "'exception'", "'variant'", "'cast'", 
                     "':='", "'&'", "'new'", "'panic!'", "'throw'", "'try'", 
                     "'catch'", "'Top'", "'Bot'" ]

    symbolicNames = [ "<INVALID>", "Surrogate_id_SYMB_0", "Surrogate_id_SYMB_1", 
                      "Surrogate_id_SYMB_2", "Surrogate_id_SYMB_3", "Surrogate_id_SYMB_4", 
                      "Surrogate_id_SYMB_5", "Surrogate_id_SYMB_6", "Surrogate_id_SYMB_7", 
                      "Surrogate_id_SYMB_8", "Surrogate_id_SYMB_9", "Surrogate_id_SYMB_10", 
                      "Surrogate_id_SYMB_11", "Surrogate_id_SYMB_12", "Surrogate_id_SYMB_13", 
                      "Surrogate_id_SYMB_14", "Surrogate_id_SYMB_15", "Surrogate_id_SYMB_16", 
                      "Surrogate_id_SYMB_17", "Surrogate_id_SYMB_18", "Surrogate_id_SYMB_19", 
                      "Surrogate_id_SYMB_20", "Surrogate_id_SYMB_21", "Surrogate_id_SYMB_22", 
                      "Surrogate_id_SYMB_23", "Surrogate_id_SYMB_24", "Surrogate_id_SYMB_25", 
                      "Surrogate_id_SYMB_26", "Surrogate_id_SYMB_27", "Surrogate_id_SYMB_28", 
                      "Surrogate_id_SYMB_29", "Surrogate_id_SYMB_30", "Surrogate_id_SYMB_31", 
                      "Surrogate_id_SYMB_32", "Surrogate_id_SYMB_33", "Surrogate_id_SYMB_34", 
                      "Surrogate_id_SYMB_35", "Surrogate_id_SYMB_36", "Surrogate_id_SYMB_37", 
                      "Surrogate_id_SYMB_38", "Surrogate_id_SYMB_39", "Surrogate_id_SYMB_40", 
                      "Surrogate_id_SYMB_41", "Surrogate_id_SYMB_42", "Surrogate_id_SYMB_43", 
                      "Surrogate_id_SYMB_44", "Surrogate_id_SYMB_45", "Surrogate_id_SYMB_46", 
                      "Surrogate_id_SYMB_47", "Surrogate_id_SYMB_48", "Surrogate_id_SYMB_49", 
                      "Surrogate_id_SYMB_50", "Surrogate_id_SYMB_51", "Surrogate_id_SYMB_52", 
                      "Surrogate_id_SYMB_53", "Surrogate_id_SYMB_54", "Surrogate_id_SYMB_55", 
                      "Surrogate_id_SYMB_56", "Surrogate_id_SYMB_57", "Surrogate_id_SYMB_58", 
                      "Surrogate_id_SYMB_59", "Surrogate_id_SYMB_60", "Surrogate_id_SYMB_61", 
                      "Surrogate_id_SYMB_62", "Surrogate_id_SYMB_63", "Surrogate_id_SYMB_64", 
                      "Surrogate_id_SYMB_65", "EXCEPTION", "VARIANT", "CAST", 
                      "ASSIGN", "REF_TYPE", "REFERENCE", "PANIC", "THROW", 
                      "TRY", "CATCH", "TOP_TYPE", "BOTTOM_TYPE", "COMMENT_antlr_builtin", 
                      "MULTICOMMENT_antlr_builtin", "StellaIdent", "ExtensionName", 
                      "MemoryAddress", "INTEGER", "WS", "ErrorToken" ]

    RULE_start_Program = 0
    RULE_start_Expr = 1
    RULE_start_Type = 2
    RULE_program = 3
    RULE_languageDecl = 4
    RULE_extension = 5
    RULE_decl = 6
    RULE_annotation = 7
    RULE_paramDecl = 8
    RULE_expr = 9
    RULE_patternBinding = 10
    RULE_binding = 11
    RULE_matchCase = 12
    RULE_pattern = 13
    RULE_labelledPattern = 14
    RULE_stellatype = 15
    RULE_recordFieldType = 16
    RULE_variantFieldType = 17

    ruleNames =  [ "start_Program", "start_Expr", "start_Type", "program", 
                   "languageDecl", "extension", "decl", "annotation", "paramDecl", 
                   "expr", "patternBinding", "binding", "matchCase", "pattern", 
                   "labelledPattern", "stellatype", "recordFieldType", "variantFieldType" ]

    EOF = Token.EOF
    Surrogate_id_SYMB_0=1
    Surrogate_id_SYMB_1=2
    Surrogate_id_SYMB_2=3
    Surrogate_id_SYMB_3=4
    Surrogate_id_SYMB_4=5
    Surrogate_id_SYMB_5=6
    Surrogate_id_SYMB_6=7
    Surrogate_id_SYMB_7=8
    Surrogate_id_SYMB_8=9
    Surrogate_id_SYMB_9=10
    Surrogate_id_SYMB_10=11
    Surrogate_id_SYMB_11=12
    Surrogate_id_SYMB_12=13
    Surrogate_id_SYMB_13=14
    Surrogate_id_SYMB_14=15
    Surrogate_id_SYMB_15=16
    Surrogate_id_SYMB_16=17
    Surrogate_id_SYMB_17=18
    Surrogate_id_SYMB_18=19
    Surrogate_id_SYMB_19=20
    Surrogate_id_SYMB_20=21
    Surrogate_id_SYMB_21=22
    Surrogate_id_SYMB_22=23
    Surrogate_id_SYMB_23=24
    Surrogate_id_SYMB_24=25
    Surrogate_id_SYMB_25=26
    Surrogate_id_SYMB_26=27
    Surrogate_id_SYMB_27=28
    Surrogate_id_SYMB_28=29
    Surrogate_id_SYMB_29=30
    Surrogate_id_SYMB_30=31
    Surrogate_id_SYMB_31=32
    Surrogate_id_SYMB_32=33
    Surrogate_id_SYMB_33=34
    Surrogate_id_SYMB_34=35
    Surrogate_id_SYMB_35=36
    Surrogate_id_SYMB_36=37
    Surrogate_id_SYMB_37=38
    Surrogate_id_SYMB_38=39
    Surrogate_id_SYMB_39=40
    Surrogate_id_SYMB_40=41
    Surrogate_id_SYMB_41=42
    Surrogate_id_SYMB_42=43
    Surrogate_id_SYMB_43=44
    Surrogate_id_SYMB_44=45
    Surrogate_id_SYMB_45=46
    Surrogate_id_SYMB_46=47
    Surrogate_id_SYMB_47=48
    Surrogate_id_SYMB_48=49
    Surrogate_id_SYMB_49=50
    Surrogate_id_SYMB_50=51
    Surrogate_id_SYMB_51=52
    Surrogate_id_SYMB_52=53
    Surrogate_id_SYMB_53=54
    Surrogate_id_SYMB_54=55
    Surrogate_id_SYMB_55=56
    Surrogate_id_SYMB_56=57
    Surrogate_id_SYMB_57=58
    Surrogate_id_SYMB_58=59
    Surrogate_id_SYMB_59=60
    Surrogate_id_SYMB_60=61
    Surrogate_id_SYMB_61=62
    Surrogate_id_SYMB_62=63
    Surrogate_id_SYMB_63=64
    Surrogate_id_SYMB_64=65
    Surrogate_id_SYMB_65=66
    EXCEPTION=67
    VARIANT=68
    CAST=69
    ASSIGN=70
    REF_TYPE=71
    REFERENCE=72
    PANIC=73
    THROW=74
    TRY=75
    CATCH=76
    TOP_TYPE=77
    BOTTOM_TYPE=78
    COMMENT_antlr_builtin=79
    MULTICOMMENT_antlr_builtin=80
    StellaIdent=81
    ExtensionName=82
    MemoryAddress=83
    INTEGER=84
    WS=85
    ErrorToken=86

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Start_ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # ProgramContext

        def EOF(self):
            return self.getToken(stellaParser.EOF, 0)

        def program(self):
            return self.getTypedRuleContext(stellaParser.ProgramContext,0)


        def getRuleIndex(self):
            return stellaParser.RULE_start_Program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_Program" ):
                listener.enterStart_Program(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_Program" ):
                listener.exitStart_Program(self)




    def start_Program(self):

        localctx = stellaParser.Start_ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start_Program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 36
            localctx.x = self.program()
            self.state = 37
            self.match(stellaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # ExprContext

        def EOF(self):
            return self.getToken(stellaParser.EOF, 0)

        def expr(self):
            return self.getTypedRuleContext(stellaParser.ExprContext,0)


        def getRuleIndex(self):
            return stellaParser.RULE_start_Expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_Expr" ):
                listener.enterStart_Expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_Expr" ):
                listener.exitStart_Expr(self)




    def start_Expr(self):

        localctx = stellaParser.Start_ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_start_Expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            localctx.x = self.expr(0)
            self.state = 40
            self.match(stellaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Start_TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.x = None # StellatypeContext

        def EOF(self):
            return self.getToken(stellaParser.EOF, 0)

        def stellatype(self):
            return self.getTypedRuleContext(stellaParser.StellatypeContext,0)


        def getRuleIndex(self):
            return stellaParser.RULE_start_Type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart_Type" ):
                listener.enterStart_Type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart_Type" ):
                listener.exitStart_Type(self)




    def start_Type(self):

        localctx = stellaParser.Start_TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_start_Type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 42
            localctx.x = self.stellatype(0)
            self.state = 43
            self.match(stellaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._extension = None # ExtensionContext
            self.extensions = list() # of ExtensionContexts
            self._decl = None # DeclContext
            self.decls = list() # of DeclContexts

        def languageDecl(self):
            return self.getTypedRuleContext(stellaParser.LanguageDeclContext,0)


        def extension(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stellaParser.ExtensionContext)
            else:
                return self.getTypedRuleContext(stellaParser.ExtensionContext,i)


        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stellaParser.DeclContext)
            else:
                return self.getTypedRuleContext(stellaParser.DeclContext,i)


        def getRuleIndex(self):
            return stellaParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = stellaParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.languageDecl()
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==stellaParser.Surrogate_id_SYMB_40:
                self.state = 46
                localctx._extension = self.extension()
                localctx.extensions.append(localctx._extension)
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 44)) & ~0x3f) == 0 and ((1 << (_la - 44)) & ((1 << (stellaParser.Surrogate_id_SYMB_43 - 44)) | (1 << (stellaParser.Surrogate_id_SYMB_48 - 44)) | (1 << (stellaParser.Surrogate_id_SYMB_61 - 44)) | (1 << (stellaParser.EXCEPTION - 44)))) != 0):
                self.state = 52
                localctx._decl = self.decl()
                localctx.decls.append(localctx._decl)
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LanguageDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stellaParser.RULE_languageDecl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class LanguageCoreContext(LanguageDeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stellaParser.LanguageDeclContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Surrogate_id_SYMB_50(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_50, 0)
        def Surrogate_id_SYMB_38(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_38, 0)
        def Surrogate_id_SYMB_1(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_1, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLanguageCore" ):
                listener.enterLanguageCore(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLanguageCore" ):
                listener.exitLanguageCore(self)



    def languageDecl(self):

        localctx = stellaParser.LanguageDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_languageDecl)
        try:
            localctx = stellaParser.LanguageCoreContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.match(stellaParser.Surrogate_id_SYMB_50)
            self.state = 59
            self.match(stellaParser.Surrogate_id_SYMB_38)
            self.state = 60
            self.match(stellaParser.Surrogate_id_SYMB_1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExtensionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stellaParser.RULE_extension

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AnExtensionContext(ExtensionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stellaParser.ExtensionContext
            super().__init__(parser)
            self._ExtensionName = None # Token
            self.extensionNames = list() # of Tokens
            self.copyFrom(ctx)

        def Surrogate_id_SYMB_40(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_40, 0)
        def Surrogate_id_SYMB_64(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_64, 0)
        def Surrogate_id_SYMB_1(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_1, 0)
        def ExtensionName(self, i:int=None):
            if i is None:
                return self.getTokens(stellaParser.ExtensionName)
            else:
                return self.getToken(stellaParser.ExtensionName, i)
        def Surrogate_id_SYMB_0(self, i:int=None):
            if i is None:
                return self.getTokens(stellaParser.Surrogate_id_SYMB_0)
            else:
                return self.getToken(stellaParser.Surrogate_id_SYMB_0, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnExtension" ):
                listener.enterAnExtension(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnExtension" ):
                listener.exitAnExtension(self)



    def extension(self):

        localctx = stellaParser.ExtensionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_extension)
        self._la = 0 # Token type
        try:
            localctx = stellaParser.AnExtensionContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(stellaParser.Surrogate_id_SYMB_40)
            self.state = 63
            self.match(stellaParser.Surrogate_id_SYMB_64)
            self.state = 64
            localctx._ExtensionName = self.match(stellaParser.ExtensionName)
            localctx.extensionNames.append(localctx._ExtensionName)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==stellaParser.Surrogate_id_SYMB_0:
                self.state = 65
                self.match(stellaParser.Surrogate_id_SYMB_0)
                self.state = 66
                localctx._ExtensionName = self.match(stellaParser.ExtensionName)
                localctx.extensionNames.append(localctx._ExtensionName)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self.match(stellaParser.Surrogate_id_SYMB_1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return stellaParser.RULE_decl

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DeclTypeAliasContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stellaParser.DeclContext
            super().__init__(parser)
            self.name = None # Token
            self.atype = None # StellatypeContext
            self.copyFrom(ctx)

        def Surrogate_id_SYMB_61(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_61, 0)
        def Surrogate_id_SYMB_6(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_6, 0)
        def StellaIdent(self):
            return self.getToken(stellaParser.StellaIdent, 0)
        def stellatype(self):
            return self.getTypedRuleContext(stellaParser.StellatypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclTypeAlias" ):
                listener.enterDeclTypeAlias(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclTypeAlias" ):
                listener.exitDeclTypeAlias(self)


    class DeclExceptionTypeContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stellaParser.DeclContext
            super().__init__(parser)
            self.exceptionType = None # StellatypeContext
            self.copyFrom(ctx)

        def EXCEPTION(self):
            return self.getToken(stellaParser.EXCEPTION, 0)
        def Surrogate_id_SYMB_61(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_61, 0)
        def Surrogate_id_SYMB_6(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_6, 0)
        def stellatype(self):
            return self.getTypedRuleContext(stellaParser.StellatypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclExceptionType" ):
                listener.enterDeclExceptionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclExceptionType" ):
                listener.exitDeclExceptionType(self)


    class DeclFunContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stellaParser.DeclContext
            super().__init__(parser)
            self._annotation = None # AnnotationContext
            self.annotations = list() # of AnnotationContexts
            self.name = None # Token
            self._paramDecl = None # ParamDeclContext
            self.paramDecls = list() # of ParamDeclContexts
            self.returnType = None # StellatypeContext
            self._stellatype = None # StellatypeContext
            self.throwTypes = list() # of StellatypeContexts
            self._decl = None # DeclContext
            self.localDecls = list() # of DeclContexts
            self.returnExpr = None # ExprContext
            self.copyFrom(ctx)

        def Surrogate_id_SYMB_43(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_43, 0)
        def Surrogate_id_SYMB_2(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_2, 0)
        def Surrogate_id_SYMB_3(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_3, 0)
        def Surrogate_id_SYMB_4(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_4, 0)
        def Surrogate_id_SYMB_56(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_56, 0)
        def Surrogate_id_SYMB_5(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_5, 0)
        def StellaIdent(self):
            return self.getToken(stellaParser.StellaIdent, 0)
        def expr(self):
            return self.getTypedRuleContext(stellaParser.ExprContext,0)

        def Surrogate_id_SYMB_8(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_8, 0)
        def Surrogate_id_SYMB_59(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_59, 0)
        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stellaParser.AnnotationContext)
            else:
                return self.getTypedRuleContext(stellaParser.AnnotationContext,i)

        def paramDecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stellaParser.ParamDeclContext)
            else:
                return self.getTypedRuleContext(stellaParser.ParamDeclContext,i)

        def stellatype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stellaParser.StellatypeContext)
            else:
                return self.getTypedRuleContext(stellaParser.StellatypeContext,i)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(stellaParser.DeclContext)
            else:
                return self.getTypedRuleContext(stellaParser.DeclContext,i)

        def Surrogate_id_SYMB_0(self, i:int=None):
            if i is None:
                return self.getTokens(stellaParser.Surrogate_id_SYMB_0)
            else:
                return self.getToken(stellaParser.Surrogate_id_SYMB_0, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclFun" ):
                listener.enterDeclFun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclFun" ):
                listener.exitDeclFun(self)


    class DeclExceptionVariantContext(DeclContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a stellaParser.DeclContext
            super().__init__(parser)
            self.name = None # Token
            self.variantType = None # StellatypeContext
            self.copyFrom(ctx)

        def EXCEPTION(self):
            return self.getToken(stellaParser.EXCEPTION, 0)
        def VARIANT(self):
            return self.getToken(stellaParser.VARIANT, 0)
        def Surrogate_id_SYMB_7(self):
            return self.getToken(stellaParser.Surrogate_id_SYMB_7, 0)
        def StellaIdent(self):
            return self.getToken(stellaParser.StellaIdent, 0)
        def stellatype(self):
            return self.getTypedRuleContext(stellaParser.StellatypeContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclExceptionVariant" ):
                listener.enterDeclExceptionVariant(self)
